[workspace]
resolver = "2"
members = [
    "fvm",
    "sdk",
    "shared",
    "testing/conformance",
    "testing/integration",
    "ipld/*",
    "testing/integration/tests/*-actor"
]

[profile.actor]
inherits = "release"
panic = "abort"
overflow-checks = true
lto = true
opt-level = "z"
#strip = true

[patch.crates-io]
wasmtime = { git = "https://github.com/fitzgen/wasmtime", branch="keep-existing-trap-backtraces" }
#wasmtime = { git = "https://github.com/bytecodealliance/wasmtime" }
