[workspace]
resolver = "2"
members = [
    "fvm",
    "sdk",
    "shared",
    "testing/conformance",
]

[workspace.dependencies]
cid = { version = "0.10.1", default-features = false }
multihash = { version = "0.18.0", default-features = false }
fvm_ipld_hamt = { git = "https://github.com/sudo-shashank/ref-fvm.git", rev = "3ad5b90f" }
fvm_ipld_amt = { git = "https://github.com/sudo-shashank/ref-fvm.git", rev = "8832c0c1" }
fvm_ipld_car = { git = "https://github.com/sudo-shashank/ref-fvm.git", rev = "3ad5b90f" }
fvm_ipld_blockstore = { git = "https://github.com/sudo-shashank/ref-fvm.git", rev = "3ad5b90f" }
fvm_ipld_encoding = { git = "https://github.com/sudo-shashank/ref-fvm.git", rev = "3ad5b90f" }

[profile.actor]
inherits = "release"
panic = "abort"
overflow-checks = true
lto = true
opt-level = "z"
#strip = true
