[package]
name = "fvm_ipld_amt"
description = "Sharded IPLD Array implementation."
version = "0.6.1"
license = "MIT OR Apache-2.0"
authors = ["ChainSafe Systems <info@chainsafe.io>", "Protocol Labs", "Filecoin Core Devs"]
edition = "2021"
repository = "https://github.com/filecoin-project/ref-fvm"

[dependencies]
cid = { workspace = true, features = ["serde-codec"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
once_cell = "1.18"
itertools = "0.11"
anyhow = "1.0.71"
fvm_ipld_blockstore = { git = "https://github.com/sudo-shashank/ref-fvm.git", branch = "8832c0c1" }
fvm_ipld_encoding = { git = "https://github.com/sudo-shashank/ref-fvm.git", branch = "8832c0c1" }

[features]
go-interop = []

[dev-dependencies]
criterion = "0.5.1"
quickcheck = "1"
quickcheck_macros = "1"

[[bench]]
name = "amt_benchmark"
path = "benches/amt_benchmark.rs"
harness = false
